backend/server.err
C:\Users\jhosa\Proton Drive\jh.osan\My files\Projects\Claude Projects\corolla-zr-maintenance-app\backend\src\index.ts:9
import { seed } from './db/seed.js';
         ^
SyntaxError: The requested module './db/seed.js' does not provide an export named 'seed'
    at #asyncInstantiate (node:internal/modules/esm/module_job:326:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:429:5)
    at async node:internal/modules/esm/loader:639:26
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:101:5)

Node.js v24.15.0
